WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
22439
Won't load stylesheets with filenames less than 2 characters long in xhtml.
https://bugs.webkit.org/show_bug.cgi?id=22439
Summary
Won't load stylesheets with filenames less than 2 characters long in xhtml.
sliahawr
Reported
2008-11-23 11:32:16 PST
When linking to a css stylesheet in an xhtml document using this code: <?xml-stylesheet href="a" type="text/css"?> -it does not load the stylesheet. However when using this code: <?xml-stylesheet href="aa" type="text/css"?> It loads the stylesheet successfully.
Attachments
Test case that demonstrates the bug.
(588 bytes, application/bzip2)
2008-11-23 11:41 PST
,
sliahawr
no flags
Details
proposed fix
(6.69 KB, patch)
2008-11-24 03:18 PST
,
Alexey Proskuryakov
mrowe
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
sliahawr
Comment 1
2008-11-23 11:41:19 PST
Created
attachment 25400
[details]
Test case that demonstrates the bug. I have included a .htaccess apache configuration file which I used to ensure the correct mime-type and charset were sent with the css files.
Alexey Proskuryakov
Comment 2
2008-11-24 03:18:16 PST
Created
attachment 25423
[details]
proposed fix
Mark Rowe (bdash)
Comment 3
2008-11-24 04:56:15 PST
Comment on
attachment 25423
[details]
proposed fix r=me
Alexey Proskuryakov
Comment 4
2008-11-24 06:41:34 PST
Fixed in <
http://trac.webkit.org/changeset/38708
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug