        Reviewed by Mark Rowe.

https://bugs.webkit.org/show_bug.cgi?id=22439
        Won't load stylesheets with filenames less than 2 characters long in xhtml.

        Test: http/tests/misc/single-character-pi-stylesheet.xhtml

        * dom/ProcessingInstruction.cpp: (WebCore::ProcessingInstruction::checkStyleSheet):
        Fix up the logic.



Canonical link: https://commits.webkit.org/30917@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38708 268f45cc-cd09-0410-ab3c-d52691b4dbfc